--- a/style.css
+++ b/style.css
@@ -1,40 +1,46 @@
-@import url("slyle/header.css");
+@import url(style/header.css);
 
 :root{
-    --cor-de-fundo: #ebecee;
-    --brnco: #ffffff;
+    --cor-de-fundo: #EBECEE;
+    --braco: #FFFFFF;
 }
 
 body{
     background-color: var(--cor-de-fundo);
 }
 
-.cabecalho-menu-hamburguer{
-    width:24xp;
-    height:24xp;
-    background-color: url("../Ima/Menu.svg");
+.cabecalho_menu-hamburguer{
+    width: 24px;
+    height: 24px;
     display: inline-block;
+    background-image: url("../img/Menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .cabecalho{
-    background-color:var(--branco);
-    display:flex;
+    background-color: var(--braco);
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    position:relative;
+    position: relative;
 }
 
 .container{
-    display:flex;
+    display: flex;
     align-items: center;
 }
 
-.lista-menu{
-    display: none;
-    position: absolute;
-    top:100;
+.container_imagem{
+    padding: 1em;
 }
 
-.container-botão:checked ~ .lista-menu{
-    display:block;
+.lista_menu{
+    display: none;
+    position: absolute;
+    top: 100%;
+}
+
+.container_botao:checked ~.lista_menu{
+    display: block;
 }
