--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
-@import url(style/header.css);
+@import url(styles/header.css);
+@import url(styles/banner.css);
 
 :root{
     --cor-de-fundo: #EBECEE;
-    --braco: #FFFFFF;
+    --branco: #FFFFFF;
+    --laranja:#eb9b00;
+    --azul-degrade: linear-gradient(97.54deg,#002f52 35,49%, #326589);
+    --fonte-principal: "Poppins";
 }
 
 body{
     background-color: var(--cor-de-fundo);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .cabecalho_menu-hamburguer{
@@ -19,7 +26,7 @@ body{
 }
 
 .cabecalho{
-    background-color: var(--braco);
+    background-color: var(--branco);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -39,8 +46,31 @@ body{
     display: none;
     position: absolute;
     top: 100%;
+    width: 60vw;
 }
 
 .container_botao:checked ~.lista_menu{
     display: block;
+}
+
+.lista_menu-titulo, .lista_menu-item{
+    padding: 1em;
+    background-color: var(--branco);
+
+}
+
+
+.lista_menu-titulo{
+    color:var(--laranja)
+}
+
+.lista_menu-link{
+    background-color: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
+}
+.container_botao{
+    display:none;
 }
